--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
  <head>
   <title>Fossiele Brandstoffen</title>
  </head>
- <h1 allign = center>Fossiele Brandstoffen</h1>
+ <body>
+ <h1>Fossiele Brandstoffen</h1>
+  </body>
 </html>
