--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <link href
   <title>Fossiele Brandstoffen</title>
  </head>
  <body>
- <h1>Fossiele Brandstoffen</h1>
+ <h1 id="FB">Fossiele Brandstoffen</h1>
   </body>
 </html>
