--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <link href
+  <link href = "style.css" rel = "stylesheet" type = "text/css"
   <title>Fossiele Brandstoffen</title>
  </head>
  <body>
