--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <title>Fossiele Brandstoffen</title>
   <link rel="stylesheet" type="text/css" href="style.css"
  </head>
  <body>
- <h1 id="FB">Fossiele Brandstoffen</h1>
   </body>
 </html>
