--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <link rel="stylesheet" type="text/css" href="style.css"
  </head>
  <body>
-  <h1 id="FB">Fossiele Brandstoffen</h1>
+  <h1 class="FB">Fossiele Brandstoffen</h1>
   </body>
 </html>
