--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
  </head>
  <body>
   <h1 class="FB">Fossiele Brandstoffen</h1>
+  <div class="FBFotos">
   <img src="blogimages.bloggen.be/2ctahirshayaan/2854686-ec50bde5394e4e0ba1b2c1f84b623aea.jpg">
+  </div>
   </body>
 </html>
