--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  </head>
  <body>
   <h1 class="FB">Fossiele Brandstoffen</h1>
-  <img src="https://www.bing.com/images/search?view=detailV2&ccid=hPaxMsJj&id=0457625A71E16509AD58A900185782C5614ADC26&thid=OIP.hPaxMsJj7xaJvLbO8p3GWAHaFj&mediaurl=http%3A%2F%2Fblogimages.bloggen.be%2F2ctahirshayaan%2F2854686-ec50bde5394e4e0ba1b2c1f84b623aea.jpg&exph=479&expw=638&q=fossiele+brandstoffen&simid=608033978725829537&selectedindex=5&ajaxhist=0&vt=0"
+  <img src="https://www.google.be/search?q=fossiele+brandstoffen&hl=nl&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiQyvrC9-jeAhUOXRoKHWkOBMIQ_AUIDigB&biw=1600&bih=783#imgrc=Go9hPyG9o7P4vM:
+"
 alt="kan niet laden">
   </body>
 </html>
