--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
  </head>
  <body>
   <h1 class="FB">Fossiele Brandstoffen</h1>
-  <img src="https://www.google.be/search?q=fossiele+brandstoffen&hl=nl&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiQyvrC9-jeAhUOXRoKHWkOBMIQ_AUIDigB&biw=1600&bih=783#imgrc=Go9hPyG9o7P4vM:
-"
+  <img src="https://www.google.be/search?q=fossiele+brandstoffen&hl=nl&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiQyvrC9-jeAhUOXRoKHWkOBMIQ_AUIDigB&biw=1600&bih=783#imgrc=Go9hPyG9o7P4vM:"
 alt="kan niet laden">
   </body>
 </html>
