--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
   <h1 class="FB">Fossiele Brandstoffen</h1>
-  <img src="https://www.google.be/search?q=fossiele+brandstoffen&hl=nl&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiQyvrC9-jeAhUOXRoKHWkOBMIQ_AUIDigB&biw=1600&bih=783#imgrc=Go9hPyG9o7P4vM:"alt="kan niet laden"> 
+  <img src="https://lectrr.be/files/attachments/.5031/h500q50_KNOKKE_BADGUYS_fossiele_brandstof.jpg"alt="kan niet laden"> 
   <p>1.welke fossiele brandstoffen zijn er?</p>
   <p>2.welke fossiele brandstof werd er in Belgie ontgonnen en waar in Belgie?</p>
 <p>3.hoe werd die fossiele brandstof ontgonnen?</p>
