--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
   </body>
 </html>
+<input class="gLFyf gsfi" maxlength="2048" name="q" type="text" jsaction="paste:puy29d" aria-autocomplete="both" aria-haspopup="false" autocapitalize="off" autocomplete="off" autocorrect="off" role="combobox" spellcheck="false" title="Zoeken" value="2" aria-label="Zoek">
