--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <h1 class="FB">Fossiele Brandstoffen</h1>
   <img src="https://lectrr.be/files/attachments/.5031/h500q50_KNOKKE_BADGUYS_fossiele_brandstof.jpg" width="140" height="100" alt="kan niet laden"> 
   <p>1.welke fossiele brandstoffen zijn er?</p>
+  <form action="/action_page.php">
+First name: <input type="text" name="FirstName" value="Mickey"><br>
+Last name: <input type="text" name="LastName" value="Mouse"><br>
+<input type="submit" value="Submit">
+</form>
   <p>2.welke fossiele brandstof werd er in Belgie ontgonnen en waar in Belgie?</p>
 <p>3.hoe werd die fossiele brandstof ontgonnen?</p>
   <p>4.waar werden de fossiele brandstoffen voor gebruikt?(geef minstens een antwoord)</p>
@@ -14,4 +19,3 @@
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
   </body>
 </html>
-<input class="gLFyf gsfi" maxlength="2048" name="q" type="text" jsaction="paste:puy29d" aria-autocomplete="both" aria-haspopup="false" autocapitalize="off" autocomplete="off" autocorrect="off" role="combobox" spellcheck="false" title="Zoeken" value="2" aria-label="Zoek">
