--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <img src="https://lectrr.be/files/attachments/.5031/h500q50_KNOKKE_BADGUYS_fossiele_brandstof.jpg" width="140" height="100" alt="kan niet laden"> 
   <p>1.welke fossiele brandstoffen zijn er?</p>
   <form action="/action_page.php">
-First name: <input type="text" name="FirstName" value="Mickey"><br>
-Last name: <input type="text" name="LastName" value="Mouse"><br>
-<input type="submit" value="Submit">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+  <input type="submit" value="Submit">
 </form>
   <p>2.welke fossiele brandstof werd er in Belgie ontgonnen en waar in Belgie?</p>
 <p>3.hoe werd die fossiele brandstof ontgonnen?</p>
