--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
   <p>4.waar werden de fossiele brandstoffen voor gebruikt?(geef minstens een antwoord)</p>
 <p>5.geef een voorbeeld hoe fossiele brandstoffen de mensen, aarde, en economie beinvloeden.</p>
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
+  <form action="/action_page.php">
+  vraag1: <input type="text" name="fname"><br>
+ vraag2: <input type="text" name="lname"><br>
+  <input type="submit" value="Submit">
+</form>
   </body>
 </html>
