--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   <p>1.welke fossiele brandstoffen zijn er?</p>
   <form action="/action_page.php">
 vraag1: <input type="text" name="vraag1"><br>
-  <input type="submit" value="Submit">
+  <input>
 </form> 
   <p>2.welke fossiele brandstof werd er in Belgie ontgonnen en waar in Belgie?</p>
   <form action="/action_page.php">
   vraag2: <input type="text" name="fname"><br>
   Last name: <input type="text" name="lname"><br>
-  <input type="submit" value="Submit">
+  <input>
 </form>
 <p>3.hoe werd die fossiele brandstof ontgonnen?</p><form action="/action_page.php">
 vraag3: <input type="text" name="fname"><br>
-  <input type="submit" value="Submit">
+  <input>
 </form>
   <p>4.waar werden de fossiele brandstoffen voor gebruikt?(geef minstens een antwoord)</p><form action="/action_page.php">
  vraag4: <input type="text" name="fname"><br>
-  <input type="submit" value="Submit">
+  <input>
 </form>
 <p>5.geef een voorbeeld hoe fossiele brandstoffen de mensen, aarde, en economie beinvloeden.</p><form action="/action_page.php">
   vraag5: <input type="text" name="fname"><br>
-  <input type="submit" value="Submit">
+  <input>
 </form>
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
   <form action="/action_page.php">
  vraag6: <input type="text" name="fname"><br>
-  <input type="submit" value="Submit">
+  <input>
   </body>
 </html>
