--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@ vraag3: <input type="text" name="fname"><br>
   <form action="/action_page.php">
  vraag6: <input type="text" name="fname"><br>
   <input>
+   tu(<ery<eryery<ery<ery'§z<'§<e'§§u
   </body>
 </html>
