--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ vraag3: <input type="text" name="fname"><br>
 </form>
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
   <form action="/action_page.php">
- vraag6: <input type="text" name="fname">
+ vraag6: <input type="text" name="fname"><br>
+   <input>
    tu(<ery<eryery<ery<ery'§z<'§<e'§§u
   </body>
 </html>
