--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <form action="/action_page.php">
 vraag1: <input type="text" name="vraag1">
 </form> 
-  <p>2.welke fossiele brandstof werd er in Belgie ontgonnen en waar in Belgie?</p>
+  <p>2.welke fossiele brandstof werd er in België ontgonnen en waar in België?</p>
   <form action="/action_page.php">
   vraag2: <input type="text" name="fname">
 </form>
