--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1 class="FB">Fossiele Brandstoffen</h1>
   <img src="https://lectrr.be/files/attachments/.5031/h500q50_KNOKKE_BADGUYS_fossiele_brandstof.jpg" width="140" height="100" alt="kan niet laden"> 
   <p>1.welke fossiele brandstoffen zijn er?</p>
-  <form action="/action_page.php">
+  <form action="">
 vraag1: <input type="text" name="vraag1">
 </form> 
   <p>2.welke fossiele brandstof werd er in België ontgonnen en waar in België?</p>
