--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   <h1 class="FB">Fossiele Brandstoffen</h1>
   <img src="https://lectrr.be/files/attachments/.5031/h500q50_KNOKKE_BADGUYS_fossiele_brandstof.jpg" width="140" height="100" alt="kan niet laden"> 
   <p>1.welke fossiele brandstoffen zijn er?</p>
-  <form action="">
+  <form action=" https://realdeathfighter.github.io/data-correction/ ">
 vraag1: <input type="text" name="vraag1">
 </form> 
   <p>2.welke fossiele brandstof werd er in België ontgonnen en waar in België?</p>
-  <form action="/action_page.php">
+  <form action=" https://realdeathfighter.github.io/data-correction/ ">
   vraag2: <input type="text" name="fname">
 </form>
-<p>3.hoe werd die fossiele brandstof ontgonnen?</p><form action="/action_page.php">
+<p>3.hoe werd die fossiele brandstof ontgonnen?</p><form action=" https://realdeathfighter.github.io/data-correction/">
 vraag3: <input type="text" name="fname">
 </form>
-  <p>4.waar werden de fossiele brandstoffen voor gebruikt?(geef minstens een antwoord)</p><form action="/action_page.php">
+  <p>4.waar werden de fossiele brandstoffen voor gebruikt?(geef minstens een antwoord)</p><form action=" https://realdeathfighter.github.io/data-correction/ ">
  vraag4: <input type="text" name="fname">
 </form>
-<p>5.geef een voorbeeld hoe fossiele brandstoffen de mensen, aarde, en economie beinvloeden.</p><form action="/action_page.php">
+<p>5.geef een voorbeeld hoe fossiele brandstoffen de mensen, aarde, en economie beinvloeden.</p><form action=" https://realdeathfighter.github.io/data-correction/ ">
   vraag5: <input type="text" name="fname">
 </form>
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
-  <form action="/action_page.php">
+  <form action=" https://realdeathfighter.github.io/data-correction/ ">
  vraag6: <input type="text" name="fname">
    
   </body>
