--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ vraag3: <input type="text" name="fname" value="submit">
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
   <form action=" https://realdeathfighter.github.io/data-correction/ ">
  vraag6: <input type="text" name="fname" value="submit">
-   
+   <h1>text</h1>
   </body>
 </html>
