--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   <img src="https://lectrr.be/files/attachments/.5031/h500q50_KNOKKE_BADGUYS_fossiele_brandstof.jpg" width="200" height="150" alt="kan niet laden"> 
   <p>1.welke fossiele brandstoffen zijn er?</p>
   <form action=" https://realdeathfighter.github.io/data-correction/ ">
-vraag1: <input type="text" name="vraag1" value="submit">
+vraag1: <input type="text" name="vraag1">
 </form> 
   <p>2.welke fossiele brandstof werd er in België ontgonnen en waar in België?</p>
   <form action=" https://realdeathfighter.github.io/data-correction/ ">
-  vraag2: <input type="text" name="fname" value="submit">
+  vraag2: <input type="text" name="fname">
 </form>
 <p>3.hoe werd die fossiele brandstof ontgonnen?</p><form action=" https://realdeathfighter.github.io/data-correction/">
-vraag3: <input type="text" name="fname" value="submit">
+vraag3: <input type="text" name="fname">
 </form>
   <p>4.waar werden de fossiele brandstoffen voor gebruikt?(geef minstens een antwoord)</p><form action=" https://realdeathfighter.github.io/data-correction/ ">
- vraag4: <input type="text" name="fname" value="submit">
+ vraag4: <input type="text" name="fname">
 </form>
 <p>5.geef een voorbeeld hoe fossiele brandstoffen de mensen, aarde, en economie beinvloeden.</p><form action=" https://realdeathfighter.github.io/data-correction/ ">
-  vraag5: <input type="text" name="fname" value="submit">
+  vraag5: <input type="text" name="fname">
 </form>
   <p>6.wat zijn voor en nadelen van fossiele brandstoffen?</p>
   <form action=" https://realdeathfighter.github.io/data-correction/ ">
- vraag6: <input type="text" name="fname" value="submit">
+ vraag6: <input type="text" name="fname">
 
    
   </body>
